--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,9 @@
         </section>
 
         <aside id="sidebar">
-          <p><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a>.</p>
-          <p><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own sheet</a>.</p>
-          <p><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a>.</p>
+          <p><h3><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a></h3></p>
+          <p><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></p>
+          <p><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a></p>
         </aside>
       </div>
     </div>
