--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,8 @@
           <p><h3><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a></h3></p>
           <p><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></p>
           <p><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a></p>
+          <p><a href="https://sky-pod.github.io/Sky-Pod/songs/Godfather_Theme_Speak_Softly_Love.html">Song</a></p>
+
         </aside>
       </div>
     </div>
