--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,11 +37,9 @@
         </section>
 
         <aside id="sidebar">
-          <p><h3><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a></h3></p>
-          <p><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></p>
-          <p><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a></p>
-          <p><a href="https://sky-pod.github.io/Sky-Pod/songs/Godfather_Theme_Speak_Softly_Love.html">Song</a></p>
-
+          <p><h2><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a></h2></p>
+          <p><h2><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></h2></p>
+          <p><h2><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a></h2></p>
         </aside>
       </div>
     </div>
