--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
 
   <body>
     <header>
+<link rel="stylesheet" href="../paper-collapse.min.css">
+<script src="../paper-collapse.min.js"></script>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
           <h1>Sky Music</h1>
