--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,39 @@
         </section>
 
         <aside id="sidebar">
-          <p><h2><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a></h2></p>
-          <p><h2><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></h2></p>
-          <p><h2><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a></h2></p>
+          <h2>Website Links</h2>
+          <h3><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a></h3><br />
+          <h3><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></h3><br />
+          <h3><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a></h3><br />
+          <br><br />
+          <h2>Useful Links</h2>
+          <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide">Sky Music Wiki</a></h3><br />
+          <h3><a href="http://skysheetmusic.com/#/">Sky Piano Simulator (English version coming soon)</a></h3><br />
+          <h3><a href="https://sky.bloomexperiment.com/c/music">Sky Fan Forum for Music Discussion</a></h3><br />
+          <br><br />
+          <h2>Credits</h2>
+          <h3>Python Sheet Maker created by Tracey and jmmelko</h3><br />
+          <br><br />
+          <h2>Contributors</h2>
+          <h3>Tracey</h3><br />
+          <h3>Sera</h3><br />
+          <h3>Bait</h3><br />
+          <h3>Edpliskin89</h3><br />
+          <h3>Madwurms</h3><br />
+          <h3>Mel</h3><br />
+          <h3>Nezara</h3><br />
+          <h3>Peri</h3><br />
+          <h3>mimizan</h3><br />
+          <h3>redleaf29</h3><br />
+          <h3>Tarhiel</h3><br />
+          <h3>Pod</h3><br />
+          <br><br />
+          <h2>Sky Musician Youtubers</h2>
+          <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw">Fiqo Mendez</a></h3><br />
+          <h3><a href="https://www.youtube.com/channel/UCmW0obFm3_1VYeW8AQNpwag">Fox Mask</a></h3><br />
+          <h3><a href="https://www.youtube.com/channel/UCfZWn60hIOCvndq32NYa8Vw">ikina sky</a></h3><br />
+          <h3><a href="https://www.youtube.com/channel/UCyyVxqrM2eiZZ_SG1550YkQ">Planaria</a></h3><br />
+
         </aside>
       </div>
     </div>
