--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,17 +49,17 @@
           <h2>Credits</h2>
           <h3>Python Sheet Maker created by Tracey and jmmelko</h3>
           <h2>Contributors</h2>
-          <h3>Tracey</h3>
-          <h3>Sera</h3>
-          <h3>Bait</h3>
-          <h3>Edpliskin89</h3>
-          <h3>Madwurms</h3>
-          <h3>Mel</h3><br />
-          <h3>Nezara</h3>
-          <h3>Peri</h3>
-          <h3>mimizan</h3>
-          <h3>redleaf29</h3>
-          <h3>Tarhiel</h3>
+          <h3>Tracey</h3>  
+          <h3>Sera</h3>  
+          <h3>Bait</h3>  
+          <h3>Edpliskin89</h3>  
+          <h3>Madwurms</h3>  
+          <h3>Mel</h3>  
+          <h3>Nezara</h3>  
+          <h3>Peri</h3>  
+          <h3>mimizan</h3>  
+          <h3>redleaf29</h3>  
+          <h3>Tarhiel</h3>  
           <h3>Pod</h3>
           <h2>Sky Musician Youtubers</h2>
           <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw">Fiqo Mendez</a></h3>
