--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,9 @@
           <h2>Credits</h2>
           <h3>Python Sheet Maker created by Tracey and jmmelko</h3>
           <h2>Contributors</h2>
-          <h3>Tracey</h3><br><h3>Sera</h3><br><h3>Bait</h3>  
+          <h3>Tracey</h3>
+          <h3>Sera</h3>
+          <h3>Bait</h3>  
           <h3>Edpliskin89</h3>  
           <h3>Madwurms</h3>  
           <h3>Mel</h3>  
