--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@
           <h3><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></h3>
           <h3><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a></h3>
           <h2>Useful Links</h2>
-          <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide">Sky Music Wiki</a></h3>
-          <h3><a href="http://skysheetmusic.com/#/">Sky Piano Simulator (English version coming soon)</a></h3>
-          <h3><a href="https://sky.bloomexperiment.com/c/music">Sky Fan Forum for Music Discussion</a></h3>
+          <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Wiki</a></h3>
+          <h3><a href="http://skysheetmusic.com/#/" target="_blank">Sky Piano Simulator (English version coming soon)</a></h3>
+          <h3><a href="https://sky.bloomexperiment.com/c/music" target="_blank">Sky Fan Forum for Music Discussion</a></h3>
           <h2>Credits</h2>
           <h3>Python Sheet Maker created by Tracey and jmmelko</h3>
           <h2>Contributors</h2>
@@ -61,10 +61,10 @@
           <h3>Tarhiel</h3>  
           <h3>Pod</h3>
           <h2>Sky Musician Youtubers</h2>
-          <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw">Fiqo Mendez</a></h3>
-          <h3><a href="https://www.youtube.com/channel/UCmW0obFm3_1VYeW8AQNpwag">Fox Mask</a></h3>
-          <h3><a href="https://www.youtube.com/channel/UCfZWn60hIOCvndq32NYa8Vw">ikina sky</a></h3>
-          <h3><a href="https://www.youtube.com/channel/UCyyVxqrM2eiZZ_SG1550YkQ">Planaria</a></h3>
+          <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw" target="_blank">Fiqo Mendez</a></h3>
+          <h3><a href="https://www.youtube.com/channel/UCmW0obFm3_1VYeW8AQNpwag" target="_blank">Fox Mask</a></h3>
+          <h3><a href="https://www.youtube.com/channel/UCfZWn60hIOCvndq32NYa8Vw" target="_blank">ikina sky</a></h3>
+          <h3><a href="https://www.youtube.com/channel/UCyyVxqrM2eiZZ_SG1550YkQ" target="_blank">Planaria</a></h3>
 
         </aside>
       </div>
