--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,9 @@
           <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Wiki</a></h3>
           <h3><a href="http://skysheetmusic.com/#/" target="_blank">Sky Piano Simulator (English version coming soon)</a></h3>
           <h3><a href="https://sky.bloomexperiment.com/c/music" target="_blank">Sky Fan Forum for Music Discussion</a></h3>
-          <h2><u>Credits</h2>
+          <h2><u>Credits</u></h2>
           <h3>Python Sheet Maker created by Tracey and jmmelko</h3>
-          <h2>Contributors</u></h2>
+          <h2><u>Contributors</u></h2>
           <h3>Tracey</h3>
           <h3>Sera</h3>
           <h3>Bait</h3>  
