--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
           <h3>redleaf29</h3>  
           <h3>Tarhiel</h3>  
           <h3>Pod</h3>
-          <h2><u>Sky Musician Youtubers</u></h2>
+          <h2><u>Sky Musicians on YouTube</u></h2>
           <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw" target="_blank">Fiqo Mendez</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCmW0obFm3_1VYeW8AQNpwag" target="_blank">Fox Mask</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCfZWn60hIOCvndq32NYa8Vw" target="_blank">ikina sky</a></h3>
