--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
         </section>
 
         <aside id="sidebar">
+          {% include search-lunr.html %}
           <h2><u>Website Links</u></h2>
           <h3><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a></h3>
           <h3><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></h3>
