--- a/_includes/search-google.html
+++ b/_includes/search-google.html
@@ -1,1 +1,1 @@
-<form method="get" id="search-google" action="https://www.google.com/search" target="_blank"><input type="hidden" name="sitesearch" value="https://sky-pod.github.io/Sky-Pod/" /><input type="text" name="q" maxlength="255" value="" placeholder="Search" class="form-control" /></form>
+<form method="get" id="search-google" action="https://www.google.com/search" target="_blank"><input type="hidden" name="sitesearch" value="sky-pod.github.io/Sky-Pod/" /><input type="text" name="q" maxlength="255" value="" placeholder="Search" class="form-control" /></form>
