--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         </a>
         <h3><p style="color:white">Visual Music Sheets for the game Sky: Children of the Light</p></h3>
         {% if site.github.is_project_page %}
-          <a href="https://sky-pod.github.io/Sky-Pod/" class="button"></a>
+          <a href="https://sky-pod.github.io/" class="button"></a>
         {% endif %}
         {% if site.github.is_user_page %}
           <a href="{{ site.github.owner_url }}" class="button"><small>Follow me on</small> GitHub</a>
@@ -40,9 +40,9 @@
           {% include search-lunr.html %}
 
           <h2><u>Website Links</u></h2>
-          <h3><a href="https://sky-pod.github.io/Sky-Pod/">Music Sheets</a></h3>
-          <h3><a href="https://sky-pod.github.io/Sky-Pod/make-your-own-sheet.html">Make your own music sheet</a></h3>
-          <h3><a href="https://sky-pod.github.io/Sky-Pod/discord.html">Discord</a></h3>
+          <h3><a href="https://sky-pod.github.io/">Music Sheets</a></h3>
+          <h3><a href="https://sky-pod.github.io/make-your-own-sheet.html">Make your own music sheet</a></h3>
+          <h3><a href="https://sky-pod.github.io/discord.html">Discord</a></h3>
           <h2><u>Useful Links</u></h2>
           <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Wiki</a></h3>
           <h3><a href="http://skysheetmusic.com/#/" target="_blank">Sky Piano Simulator (English version coming soon)</a></h3>
