--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,8 @@
           {% include search-lunr.html %}
 
           <h2><u>Website Links</u></h2>
-          <h3><a href="https://sky-pod.github.io/">Music Sheets</a></h3>
+          <h3><a href="https://sky-pod.github.io/">Visual Music Sheets</a></h3>
+          <h3><a href="https://sky-pod.github.io/how-to-read.html">How to Read</a></h3>
           <h3><a href="https://sky-pod.github.io/make-your-own-sheet.html">Make your own music sheet</a></h3>
           <h3><a href="https://sky-pod.github.io/discord.html">Discord</a></h3>
           <h2><u>Useful Links</u></h2>
