--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
           <h3><a href="https://sky-pod.github.io/make-your-own-sheet.html">Make your own music sheet</a></h3>
           <h3><a href="https://sky-pod.github.io/discord.html">Discord</a></h3>
           <h2><u>Useful Links</u></h2>
-          <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Wiki</a></h3>
+          <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Guide Wiki</a></h3>
           <h3><a href="http://skysheetmusic.com/#/" target="_blank">Sky Piano Simulator (English version coming soon)</a></h3>
           <h3><a href="https://sky.bloomexperiment.com/c/music" target="_blank">Sky Fan Forum for Music Discussion</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
