--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           <a href="https://sky-pod.github.io/" class="button"></a>
         {% endif %}
         {% if site.github.is_user_page %}
-          <a href="https://sky-pod.github.io/" class="button">Sky Music Sheets</a>
+          <a href="https://sky-pod.github.io/" class="button"></a>
         {% endif %}
       </div>
     </header>
