--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+  <link rel="icon"
+      type="image/png"
+      href="./assets/images/sky-music-logo-sheets.png">
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -39,9 +42,9 @@
         <aside id="sidebar">
           <h2><u>Website Links</u></h2>
           <h3><a href="https://sky-pod.github.io/">Visual Music Sheets</a></h3>
-          <h3><a href="https://sky-pod.github.io/how-to-read.html">How to Read</a></h3>
-          <h3><a href="https://sky-pod.github.io/make-your-own-sheet.html">Make your own music sheet</a></h3>
-          <h3><a href="https://sky-pod.github.io/discord.html">Discord</a></h3>
+          <h3><a href="./how-to-read.html">How to Read</a></h3>
+          <h3><a href="./make-your-own-sheet.html">Make your own music sheet</a></h3>
+          <h3><a href="./discord.html">Discord</a></h3>
           <h2><u>Useful Links</u></h2>
           <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Guide Wiki</a></h3>
           <h3><a href="http://skysheetmusic.com/#/" target="_blank">Sky Piano Simulator (English version coming soon)</a></h3>
