--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
 
         <aside id="sidebar">
 {% include search-lunr.html %}
+{% include search-google.html %}
           <h2><u>Website Links</u></h2>
           <h3><a href="https://sky-pod.github.io/">Visual Music Sheets</a></h3>
           <h3><a href="./how-to-read.html">How to Read</a></h3>
