--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
           <h3><a href="https://www.youtube.com/channel/UCyyVxqrM2eiZZ_SG1550YkQ" target="_blank">Planaria</a></h3>
           <h2><u>Credits</u></h2>
           <h3>Python Sheet Maker created by Tracey and jmmelko</h3>
+{% include share-buttons.html %}
           <h2><u>Contributors</u></h2>
           <h3>Tracey</h3>
           <h3>Sera</h3>
