--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,10 @@
         </a>
         <h3><p style="color:white">Visual Music Sheets for the game Sky: Children of the Light</p></h3>
         {% if site.github.is_project_page %}
-          <a href="https://sky-pod.github.io/" class="button"></a>
+          <a href="https://sky-music.github.io/" class="button"></a>
         {% endif %}
         {% if site.github.is_user_page %}
-          <a href="https://sky-pod.github.io/" class="button"></a>
+          <a href="https://sky-music.github.io/" class="button"></a>
         {% endif %}
       </div>
     </header>
@@ -42,7 +42,7 @@
         <aside id="sidebar">
 {% include search-lunr.html %}
           <h2><u>Website Links</u></h2>
-          <h3><a href="https://sky-pod.github.io/">Visual Music Sheets</a></h3>
+          <h3><a href="https://sky-music.github.io/">Visual Music Sheets</a></h3>
           <h3><a href="./how-to-read.html">How to Read</a></h3>
           <h3><a href="./make-your-own-sheet.html">Make your own music sheet</a></h3>
           <h3><a href="./discord.html">Discord</a></h3>
@@ -62,7 +62,7 @@
           <h3>Sera</h3>
           <h3>Bait</h3>  
           <h3>Edpliskin89</h3>  
-          <h3>Madwurms</h3>  
+          <h3>Madwurmz</h3>  
           <h3>Mel</h3>  
           <h3>Nezara</h3>  
           <h3>Peri</h3>  
