--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,11 +46,12 @@
           <h3><a href="https://sky-music.github.io/">Visual Music Sheets</a></h3>
           <h3><a href="./how-to-read.html">How to Read</a></h3>
           <h3><a href="./make-your-own-sheet.html">Make your own music sheet</a></h3>
-          <h3><a href="./discord.html">Discord</a></h3>
+          <h3><a href="./discord.html">Our Discord</a></h3>
           <h2><u>Useful Links</u></h2>
           <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Guide Wiki</a></h3>
           <h3><a href="http://skysheetmusic.com/#/" target="_blank">Sky Piano Simulator (English version coming soon)</a></h3>
           <h3><a href="https://sky.bloomexperiment.com/c/music" target="_blank">Sky Fan Forum for Music Discussion</a></h3>
+          <h3><a href="https://discordapp.com/invite/thatskygame" target="_blank">Official Sky Discord</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
           <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw" target="_blank">Fiqo Mendez</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCmW0obFm3_1VYeW8AQNpwag" target="_blank">Fox Mask</a></h3>
