--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,7 @@
           <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw" target="_blank">Fiqo Mendez</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCmW0obFm3_1VYeW8AQNpwag" target="_blank">Fox Mask</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCfZWn60hIOCvndq32NYa8Vw" target="_blank">ikina sky</a></h3>
+          <h3><a href="https://www.youtube.com/channel/UCgfm4MIgqaYkEyC1P0XCz-A" target="_blank">None-のん</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCyyVxqrM2eiZZ_SG1550YkQ" target="_blank">Planaria</a></h3>
           <h2><u>Credits</u></h2>
           <h3><a href="https://github.com/sky-music/sky-python-music-sheet-maker" target="_blank">Python Sheet Maker</a> created by Tracey and jmmelko</h3>
