--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -125,26 +125,26 @@ code, pre {
   margin-bottom: 5px;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 13px;
-  color: #222;
+  color: #ffffff;
 }
 
 code {
   padding: 0 3px;
-  background-color: #f2f8fc;
-  border: solid 1px #dbe7f3;
+  background-color: #000000;
+  border: solid 1px #000000;
 }
 
 pre {
   padding: 5px;
   overflow: auto;
   text-shadow: none;
-  background: #fff;
-  border: solid 1px #f2f2f2;
+  background: #000000;
+  border: solid 1px #000000;
 }
 pre code {
   padding: 0;
   color: #2879d0;
-  background-color: #fff;
+  background-color: #000000;
   border: none;
 }
 
