--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
           <h3><a href="https://sky.bloomexperiment.com/c/music" target="_blank">Sky Fan Forum for Music Discussion</a></h3>
           <h3><a href="https://discordapp.com/invite/thatskygame" target="_blank">Official Sky Discord</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
+          <h3><a href="https://www.youtube.com/channel/UCOto7vg04znzuFVnyXdIpwA" target="_blank">Alkis D</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw" target="_blank">Fiqo Mendez</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCmW0obFm3_1VYeW8AQNpwag" target="_blank">Fox Mask</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCfZWn60hIOCvndq32NYa8Vw" target="_blank">ikina sky</a></h3>
