--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
-<!DOCTYPE html>
+
+!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+{% if page.tipue_search_active or layout.tipue_search_active %}
+<link rel="stylesheet" href="{{ "/assets/tipuesearch/css/normalize.css" | relative_url }}">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="{{ "/assets/tipuesearch/tipuesearch_content.js" | relative_url }}"></script>
+<link rel="stylesheet" href="{{ "/assets/tipuesearch/css/tipuesearch.css" | relative_url }}">
+<script src="{{ "/assets/tipuesearch/tipuesearch_set.js" | relative_url }}"></script>
+<script src="{{ "/assets/tipuesearch/tipuesearch.min.js" | relative_url }}"></script>
+{% endif %}
   <link rel="icon"
       type="image/png"
       href="./assets/images/sky-music-logo-sheets.png">
