--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -27,7 +27,7 @@ header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf url(../images/Header6.jpg);
+  background: #2e7bcf url(../images/image1.jpg);
   border-bottom: solid 1px #275da1;
 }
 
