--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,7 @@
           <h3>redleaf29</h3>  
           <h3>Tarhiel</h3>  
           <h3>Pod</h3>
+          <h3>Eduwimdy</h3>
 
         </aside>
       </div>
