--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,7 @@
           <h3><a href="https://www.youtube.com/channel/UCOto7vg04znzuFVnyXdIpwA" target="_blank">Alkis D</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw" target="_blank">Fiqo Mendez</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCmW0obFm3_1VYeW8AQNpwag" target="_blank">Fox Mask</a></h3>
+          <h3><a href="https://www.youtube.com/channel/UCAT4yg4ATRRI5-0TWfA5-wA" target="_blank">Hebi Ire</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCfZWn60hIOCvndq32NYa8Vw" target="_blank">ikina sky</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCwkIIaRG4GXsu3kUoW_XBNQ" target="_blank">Kirie</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCgfm4MIgqaYkEyC1P0XCz-A" target="_blank">None-のん</a></h3>
