Add song transcibers

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,12 @@
           <h3>redleaf29</h3>  
           <h3>Tarhiel</h3>  
           <h3>Pod</h3>
+          <h3>damiante</h3>
           <h3>Eduwimdy</h3>
+          <h3>SkyOwlKey</h3>
+          <h3>Hjowe</h3>
+          <h3>kai00</h3>
+
 
         </aside>
       </div>
