--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,6 +84,7 @@
           <h3>Hjowe</h3>
           <h3>kai00</h3>
           <h3>yeom</h3>
+          <h3>justmeandmysalmon</h3>
 
 
         </aside>
