--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,7 @@
           <h3>kai00</h3>
           <h3>yeom</h3>
           <h3>justmeandmysalmon</h3>
+          <h3>Jonathan Xu</h3>
 
 
         </aside>
