--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
           <h2><u>Credits</u></h2>
           <h3><a href="https://github.com/sky-music/sky-python-music-sheet-maker" target="_blank">Python Sheet Maker</a> created by Tracey and jmmelko</h3>
           <h3>SVG icons are thanks to <a href="http://madwurmz.com" target="_blank">madwurmz</a>.</h3>
-          <h3>Website by Pod and Tracey.</h3>
+          <h3>Website by Tracey.</h3>
           <h2><u>Contributors</u></h2>
           <h3>Tracey</h3>
           <h3>Sera</h3>
@@ -76,7 +76,6 @@
           <h3>mimizan</h3>  
           <h3>redleaf29</h3>  
           <h3>Tarhiel</h3>  
-          <h3>Pod</h3>
           <h3>Octodillo</h3>
           <h3>damiante</h3>
           <h3>Eduwimdy</h3>
