--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
           <h3><a href="./discord.html">Our Discord</a></h3>
           <h2><u>Useful Links</u></h2>
           <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Guide Wiki</a></h3>
-          <h3><a href="https://sky-music.herokuapp.com/" target="_blank">Sky Instrument Simulator</a></h3>
+          <h3><a href="https://mcbeeringi.github.io/apps/sky/" target="_blank">Sky Instrument Simulator</a></h3>
           <h3><a href="https://sky.bloomexperiment.com/c/music" target="_blank">Sky Fan Forum for Music Discussion</a></h3>
           <h3><a href="https://discordapp.com/invite/thatskygame" target="_blank">Official Sky Discord</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
