--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,9 @@
           <h3>yeom</h3>
           <h3>justmeandmysalmon</h3>
           <h3>Jonathan Xu</h3>
+          <h3>Istari</h3>
+          <h3>Sam</h3>
+          
 
 
         </aside>
