Upload new songs
- Avatar: The Last Airbender - Avatar's Love (kage (@sky))

- Stardew Valley - Wind can still be Winter (IsaDaCool)

- wuji (kai00)

- Kiki's Delivery Service - A Town With An Ocean View (Nezumi)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,6 +86,9 @@
           <h3>Jonathan Xu</h3>
           <h3>Istari</h3>
           <h3>Sam</h3>
+          <h3>kage (@sky)</h3>
+          <h3>IsaDaCool</h3>
+          <h3>Nezumi</h3>
           
 
 
