--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-
+    <script type="text/javascript" src="{{ '/js/indexDarkModeScript.js' }}"></script>
 {% seo %}
   </head>
 
