--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
           <h3><a href="https://www.youtube.com/channel/UCyyVxqrM2eiZZ_SG1550YkQ" target="_blank">Planaria</a></h3>
           <h2><u>Credits</u></h2>
           <h3><a href="https://github.com/sky-music/sky-python-music-sheet-maker" target="_blank">Python Sheet Maker</a> created by Tracey and jmmelko</h3>
-          <h4>with help from: Specy, Roux Karlux (skyventuree) Jirasimok</h4>
+          <h3>with help from: Specy, Roux Karlux (skyventuree) Jirassimok</h3>
           <h3>SVG icons are thanks to <a href="http://madwurmz.com" target="_blank">madwurmz</a>.</h3>
           <h2><u>Contributors</u></h2>
           <h3>Tracey</h3>
