--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    {% include google-analytics.html %} 
   <link rel="icon"
       type="image/png"
       href="./assets/images/sky-music-logo-sheets.png">
