--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -354,9 +354,10 @@ footer a:hover {
   }
   table {
     border-color: white;
+    background-color: #121212;
   }
   p, body, td {
-  color: white;  
+    color: white;
   }
 }
 
