--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -360,7 +360,7 @@ footer a:hover {
     color: white;
     background-color: #121212;
   }
-  li {
+  li, details, summary {
     background: #121212;
   }
 }
