--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -363,6 +363,10 @@ footer a:hover {
   li, details, summary {
     background: #121212;
   }
+
+  .inner {
+    background-color: #121212;
+  }
 }
 
 
