--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,14 +43,15 @@
 
         <aside id="sidebar">
 {% include search-google.html %}       
-          <h2><u>Website Links</u></h2>
+          <h2><u>Shortcuts to:</u></h2>
           <h3><a href="https://sky-music.github.io/">Visual Music Sheets</a></h3>
-          <h3><a href="./how-to-read.html">How to Read</a></h3>
+          <h3><a href="./how-to-read.html">How to Read a music sheet</a></h3>
           <h3><a href="./make-your-own-sheet.html">Make your own music sheet</a></h3>
           <h3><a href="./discord.html">Our Discord</a></h3>
-          <h2><u>Useful Links</u></h2>
+          <h2><u>External Links</u></h2>
           <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Guide Wiki</a></h3>
-          <h3><a href="https://specy.github.io/skyMusic/" target="_blank">Sky Instrument Simulator</a></h3>
+          <h3><a href="https://jmmelko.eu.pythonanywhere.com">Music Sheet Maker (online tool) and MIDI/JSON/TXT/HTML Converter</a></h3>
+          <h3><a href="https://specy.github.io/skyMusic/" target="_blank">Sky-Music Instrument Simulator and Composer</a></h3>
           <h3><a href="https://discordapp.com/invite/thatskygame" target="_blank">Official Sky Discord</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
           <h3><a href="https://www.youtube.com/channel/UCOto7vg04znzuFVnyXdIpwA" target="_blank">Alkis D</a></h3>
