--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
           <h3><a href="./discord.html">Our Discord</a></h3>
           <h2><u>External Links</u></h2>
           <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Guide Wiki</a></h3>
-          <h3><a href="https://jmmelko.eu.pythonanywhere.com">Online sheet maker and converter (MIDI/JSON/TXT/HTML)</a></h3>
+          <h3><a href="https://jmmelko.eu.pythonanywhere.com">Sheet maker and converter (Midi/Json/text/html)</a></h3>
           <h3><a href="https://specy.github.io/skyMusic/" target="_blank">Sky-Music Instrument Simulator and Composer</a></h3>
           <h3><a href="https://discordapp.com/invite/thatskygame" target="_blank">Official Sky Discord</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
