--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
-          <h1>Sky Music</h1>
+          <h1>Sky Music Library</h1>
         </a>
-        <h3><p style="color:white">Visual Music Sheets for the game Sky: Children of the Light</p></h3>
+        <h3><p style="color:white">Visual Music Sheets (tablatures) for the game Sky: Children of the Light</p></h3>
         {% if site.github.is_project_page %}
           <a href="https://sky-music.github.io/" class="button"></a>
         {% endif %}
