--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
           <h2><u>External Links</u></h2>
           <h3><a href="https://sky-children-of-the-light.fandom.com/wiki/Sky_Music_Guide" target="_blank">Sky Music Guide Wiki</a></h3>
           <h3><a href="https://jmmelko.eu.pythonanywhere.com">Sheet maker and converter (Midi/Json/text/html)</a></h3>
-          <h3><a href="https://specy.github.io/skyMusic/" target="_blank">Sky-Music Instrument Simulator and Composer</a></h3>
+          <h3><a href="https://sky-music.specy.app" target="_blank">Sky-Music Instrument Simulator and Composer</a></h3>
           <h3><a href="https://discordapp.com/invite/thatskygame" target="_blank">Official Sky Discord</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
           <h3><a href="https://www.youtube.com/channel/UCOto7vg04znzuFVnyXdIpwA" target="_blank">Alkis D</a></h3>
