Add Lexo to contributors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
           <h3>Mel</h3>  
           <h3>Nezara</h3>  
           <h3>Peri</h3>  
-          <h3>mimizan</h3>  
+          <h3>mimizan / JMM</h3>  
           <h3>redleaf29</h3>  
           <h3>Tarhiel</h3>  
           <h3>Octodillo</h3>
@@ -95,8 +95,7 @@
           <h3>nikudons</h3>
           <h3>Nezumi</h3>
           <h3>iara</h3>
-          
-
+          <h3>Lexo</h3>
 
         </aside>
       </div>
