Add moomshire to Contributors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,7 @@
           <h3>Nezumi</h3>
           <h3>iara</h3>
           <h3>Lexo</h3>
+          <h3>Moomshire</h3>
 
         </aside>
       </div>
