Add Minhlinkthe to contributors' list

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,6 +97,7 @@
           <h3>iara</h3>
           <h3>Lexo</h3>
           <h3>Moomshire</h3>
+          <h3>Minhlinkthe</h3>
 
         </aside>
       </div>
