--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
-          <h1>Sky Music Library</h1>
+          <h1>Sky & EasyPlays Music Library</h1>
         </a>
-        <h3><p style="color:white">Visual Music Sheets (tablatures) for the game Sky: Children of the Light</p></h3>
+        <h3><p style="color:white">Visual Music Sheets (tablatures) for the game Sky: Children of the Light and the EasyPlays physical music keyboard</p></h3>
         {% if site.github.is_project_page %}
           <a href="https://sky-music.github.io/" class="button"></a>
         {% endif %}
@@ -53,6 +53,7 @@
           <h3><a href="https://jmmelko.eu.pythonanywhere.com">Sheet maker and converter (Midi/Json/text/html)</a></h3>
           <h3><a href="https://sky-music.specy.app" target="_blank">Sky-Music Instrument Simulator and Composer</a></h3>
           <h3><a href="https://discordapp.com/invite/thatskygame" target="_blank">Official Sky Discord</a></h3>
+          <h3><a href="https://summertones.fun" target="_blank">EasyPlays physical music keyboard</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
           <h3><a href="https://www.youtube.com/channel/UCOto7vg04znzuFVnyXdIpwA" target="_blank">Alkis D</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw" target="_blank">Fiqo Mendez</a></h3>
