Update EASYPLAY name in default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
-          <h1>Sky & EasyPlays Music Library</h1>
+          <h1>Sky & EASYPLAY Music Library</h1>
         </a>
-        <h3><p style="color:white">Visual Music Sheets (tablatures) for the game Sky: Children of the Light and the EasyPlays physical music keyboard</p></h3>
+        <h3><p style="color:white">Visual Music Sheets (tablatures) for the game <a href="https://www.thatskygame.com" target="_blank">Sky: Children of the Light</a> and the <a href="https://www.summertones.fun/">EASYPLAY</a> music keyboard</p></h3>
         {% if site.github.is_project_page %}
           <a href="https://sky-music.github.io/" class="button"></a>
         {% endif %}
