Fix EASYPLAY name in sidebar in default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
           <h3><a href="https://jmmelko.eu.pythonanywhere.com">Sheet maker and converter (Midi/Json/text/html)</a></h3>
           <h3><a href="https://sky-music.specy.app" target="_blank">Sky-Music Instrument Simulator and Composer</a></h3>
           <h3><a href="https://discordapp.com/invite/thatskygame" target="_blank">Official Sky Discord</a></h3>
-          <h3><a href="https://summertones.fun" target="_blank">EasyPlays physical music keyboard</a></h3>
+          <h3><a href="https://www.summertones.fun" target="_blank">EASYPLAY music keyboard</a></h3>
           <h2><u>Sky Musicians on YouTube</u></h2>
           <h3><a href="https://www.youtube.com/channel/UCOto7vg04znzuFVnyXdIpwA" target="_blank">Alkis D</a></h3>
           <h3><a href="https://www.youtube.com/channel/UCJeRpUbuo6uF19zchjy-_Pw" target="_blank">Fiqo Mendez</a></h3>
