--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <a href="{{ '/' | absolute_url }}">
           <h1>Sky & EASYPLAY Music Library</h1>
         </a>
-        <h3><p style="color:white">Visual Music Sheets (tablatures) for the game <a href="https://www.thatskygame.com" target="_blank">Sky: Children of the Light</a> and the <a href="https://www.summertones.fun/">EASYPLAY</a> music keyboard</p></h3>
+        <h3><p style="color:white">Visual Music Sheets (tablatures) for the game <a style="color:#aaaaff" href="https://www.thatskygame.com" target="_blank">Sky: Children of the Light</a> and the <a style="color:#aaaaff" href="https://www.summertones.fun/" target="_blank">EASYPLAY</a> music keyboard</p></h3>
         {% if site.github.is_project_page %}
           <a href="https://sky-music.github.io/" class="button"></a>
         {% endif %}
