Add SquidJuice to credits

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,6 +101,7 @@
           <h3>Minhlinkthe</h3>
           <h3>🌸Goldiegirl🌸[🇬🇧]</h3>
           <h3>Fishew</h3>
+          <h3>SquidJuice</h3>
         </aside>
       </div>
     </div>
