Add Cat to credits on home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,6 +102,7 @@
           <h3>🌸Goldiegirl🌸[🇬🇧]</h3>
           <h3>Fishew</h3>
           <h3>SquidJuice</h3>
+          <h3>Cat🔪</h3>
         </aside>
       </div>
     </div>
