--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,6 +103,7 @@
           <h3>Fishew</h3>
           <h3>SquidJuice</h3>
           <h3>Cat🔪</h3>
+          <h3>Guamgirl21</h3>
         </aside>
       </div>
     </div>
