--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,6 +104,7 @@
           <h3>SquidJuice</h3>
           <h3>Cat🔪</h3>
           <h3>Guamgirl21</h3>
+          <h3>ChibiChilli</h3>
         </aside>
       </div>
     </div>
